--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,13 @@ jobs:
     steps:
       - checkout
       - run: sudo npm i -g prisma
-      - run: prisma deploy
+      - run:
+          name: Deploy prisma server
+          command: prisma deploy
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 workflows:
   version: 2
   build_and_test:
