Adding products and seeding data

--- a/prisma.yml
+++ b/prisma.yml
@@ -8,6 +8,8 @@ generate:
 hooks:
   post-deploy:
     - prisma generate
+seed:
+  import: seed.graphql
 
 custom:
   local_endpoint: http://localhost:4466
